@@ -48,6 +48,7 @@
 - fixed: HTTP status code with `204` in `REQUEST()`
 - fixed: `cookies` in `WEBSOCKETCLIENT`
 - fixed: `REQUEST()` with `json` flag and with `null` and `''` value
+- fixed: rendering components in `layout`
 
 - __removed: backward compatibility__ with older version of Node.js < 10
 
